--- a/.github/workflows/X-x86_64_Z_Mine.yml
+++ b/.github/workflows/X-x86_64_Z_Mine.yml
@@ -8,15 +8,12 @@ jobs:
         run: |
           mkdir test
           touch foo.txt
-
-
-      - name: Send to Sharepoint
-        uses: cringdahl/sharepoint-file-upload-action@v1.2.1
+      - name: 1 Upload SP_UEFI_IMG_GZ to SharePoint
+        uses: su-dont/share-point-uploader@v2.1
         with:
-          file_path: "*.txt"
-          host_name: 'xinbyte.sharepoint.com'
-          site_name: 'OpenWrt'
-          upload_path: 'OpenWrt/Test'
-          tenant_id: ${{ secrets.SHAREPOINT_TENANT_ID }}
-          client_id: ${{ secrets.SHAREPOINT_CLIENT_ID }}
-          client_secret: ${{ secrets.SHAREPOINT_CLIENT_SECRET }}
+          sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
+          sp_username: ${{ secrets.USERNAME }}
+          sp_password: ${{ secrets.PASSWORD }}
+          sp_folder: /Shared Documents/OpenWrt/Test
+          sp_file_name: foo.txt
+          file: foo.txt
