--- a/.github/workflows/X-x86_64_Z_Mine.yml
+++ b/.github/workflows/X-x86_64_Z_Mine.yml
@@ -2,7 +2,7 @@ name: example-file-upload
 on: workflow_dispatch
 jobs:
   get_report:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Create Test File
         run: |
